Fix nav menu on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -210,7 +210,7 @@ html {
   box-sizing: inherit;
 }
 
-body {
+.index {
   background: _palette(bg);
 
   // Stops initial animations until page loads.
@@ -1202,7 +1202,7 @@ button,
   }
 }
 
-body.index #main {
+.index #main {
   padding-top: 5em;
 }
 
@@ -1570,7 +1570,7 @@ body.index #main {
     }
   }
 
-  body.index #main {
+  .index #main {
     padding-top: 4.5em;
   }
 
@@ -1703,7 +1703,7 @@ body.index #main {
     }
   }
 
-  body {
+  .index {
     &.navPanel-visible {
       #page-wrapper {
         @include vendor('transform', 'translateX(#{_size(navPanel)})');
@@ -1890,11 +1890,11 @@ body.index #main {
     padding: 3.5em 0 2.5em 0;
   }
 
-  body.index #main {
+  .index #main {
     padding: 2.5em 0 0 0;
   }
 
-  body.contact #main {
+  .contact #main {
     padding-bottom: 0;
   }
 
